# ROS_labs

devel/: _setup_util.py  local_setup.sh  setup.sh
devel/include/det_service_lab/: DeterminantCounterServRequest.h
devel/lib/client_server/: client  publisher  server  subscriber
devel/lib/pkgconfig/: client_server.pc  det_service_lab.pc
devel/lib/python3/dist-packages/det_service_lab/srv/: _DeterminantCounterServ.py  __init__.py
devel/share/client_server/cmake/: client_serverConfig.cmake
devel/share/common-lisp/ros/det_service_lab/srv/: DeterminantCounterServ.lisp  _package.lisp  _package_DeterminantCounterServ.lisp  det_service_lab-srv.asd
devel/share/det_service_lab/cmake/: det_service_lab-msg-extras.cmake  det_service_lab-msg-paths.cmake  det_service_labConfig.cmake
devel/share/roseus/ros/det_service_lab/: manifest.l
lab_1/client_server/src/: client_node.cpp  det_server.cpp
lab_1/det_service_lab/: DeterminantCounterServ.h
lab_1/include/det_service_lab/: DeterminantCounterServResponse.h
lab_1_stz/: CMakeLists.txt  laba_1_stz.cpp  laba_1_stz_dop.cpp
lab_2/: model.config  new_map.yaml  room_map.pgm  turtlebot3_my_navigation.launch
lab_2/launch/: turtlebot3_my_house.launch
lab_2/room/: model.sdf
lab_2/worlds/: room.world
lab_2_stz/: CMakeLists.txt  laba_2.cpp  laba_2_2.cpp
laba_3_stz/: CMakeLists.txt  laba_3.cpp
src/client_server/: CMakeLists.txt  package.xml
src/client_server/src/: det_subscriber_node.cpp
src/det_service_lab/: CMakeLists.txt  package.xml
src/det_service_lab/srv/: DeterminantCounterServ.srv
(+3 files in other folders)
